@@ -3,7 +3,7 @@ import React from 'react';
 import styled from '@emotion/styled';
 import interpolateComponents from 'interpolate-components';
 import { Icon, info } from '@wordpress/icons';
-import Tooltip from 'wcstripe/components/tooltip';
+import Popover from 'wcstripe/components/popover';
 import { usePaymentMethodCurrencies } from 'utils/use-payment-method-currencies';
 
 const StyledPill = styled.span`
@@ -22,20 +22,27 @@ const StyledPill = styled.span`
 `;
 
 const StyledLink = styled.a`
-	&,
-	&:hover,
+	&:focus,
 	&:visited {
-		color: white;
+		box-shadow: none;
 	}
 `;
 
 const IconWrapper = styled.span`
 	height: 16px;
+	cursor: pointer;
 `;
 
 const AlertIcon = styled( Icon )`
 	fill: #674600;
 `;
+
+const IconComponent = ( { children, ...props } ) => (
+	<IconWrapper { ...props }>
+		<AlertIcon icon={ info } size="16" />
+		{ children }
+	</IconWrapper>
+);
 
 const PaymentMethodMissingCurrencyPill = ( { id, label } ) => {
 	const paymentMethodCurrencies = usePaymentMethodCurrencies( id );
@@ -48,7 +55,8 @@ const PaymentMethodMissingCurrencyPill = ( { id, label } ) => {
 		return (
 			<StyledPill>
 				{ __( 'Requires currency', 'woocommerce-gateway-stripe' ) }
-				<Tooltip
+				<Popover
+					BaseComponent={ IconComponent }
 					content={ interpolateComponents( {
 						mixedString: sprintf(
 							/* translators: $1: a payment method name. %2: Currency(ies). */
@@ -73,11 +81,7 @@ const PaymentMethodMissingCurrencyPill = ( { id, label } ) => {
 							),
 						},
 					} ) }
-				>
-					<IconWrapper>
-						<AlertIcon icon={ info } size="16" />
-					</IconWrapper>
-				</Tooltip>
+				/>
 			</StyledPill>
 		);
 	}
